earth-208: Fix fields overlapping.

--- a/src/website-content/styles/facts/places/port/unlocode.module.css
+++ b/src/website-content/styles/facts/places/port/unlocode.module.css
@@ -75,6 +75,10 @@
     clear:          both;
 }
 
+.portDetailField {
+    clear:          both;
+}
+
 .portDetailFieldName {
     font-weight:        400;
     font-size:          14px;
